<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_home"
        android:orderInCategory="100"
        android:title="@string/home_menu_option"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_sponsor"
        android:orderInCategory="200"
        android:title="@string/pay_menu_option"
        app:showAsAction="ifRoom" />

    <item
        android:id="@+id/action_details"
        android:orderInCategory="300"
        android:title="@string/details_dialog_title"
        app:showAsAction="never" />

    <item
        android:id="@+id/action_leave"
        android:orderInCategory="400"
        android:title="@string/leave_project_menu_option"
        app:showAsAction="never" />

</menu>
