<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:padding="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/change_title_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/change_project_title_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <EditText
        android:id="@+id/change_title_editText"
        android:layout_below="@+id/change_title_textView"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:hint="@string/default_project_title"
        android:importantForAutofill="no"
        android:inputType="textCapWords" />

    <Button
        android:id="@+id/change_title_positiveButton"
        android:layout_below="@+id/change_title_editText"
        android:layout_alignParentEnd="true"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ok_text" />

    <Button
        android:id="@+id/change_title_negativeButton"
        android:layout_below="@id/change_title_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/change_title_positiveButton"
        android:text="@string/cancel_text" />

</RelativeLayout>