<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/details_dialog_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="@dimen/activity_vertical_margin"
        android:text="@string/details_dialog_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:id="@+id/projectId_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_below="@+id/details_dialog_title"
        android:layout_centerHorizontal="true"
        android:text="@string/default_project_id_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>

    <TextView
        android:id="@+id/tags_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/projectId_textView"
        android:layout_centerHorizontal="true"
        android:text="@string/tags_hint"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <ListView
        android:id="@+id/tagsListView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="@dimen/activity_vertical_margin"
        android:layout_below="@+id/tags_title"
        android:layout_centerHorizontal="true" />

    <Button
        android:id="@+id/closeDialogButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tagsListView"
        android:layout_toStartOf="@+id/addTagButton"
        android:text="@string/close_text" />

    <Button
        android:id="@+id/addTagButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/tagsListView"
        android:layout_alignParentEnd="true"
        android:text="@string/add_tag_prompt"/>

</RelativeLayout>