<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:layout_centerInParent="true"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/add_tag_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/tag_dialog_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/addTagTextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_below="@+id/add_tag_textView"
        android:layout_centerHorizontal="true"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox">

        <EditText
            android:id="@+id/add_tag_editText"
            android:layout_below="@+id/add_tag_textView"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:hint="@string/tag_dialog_hint"
            android:inputType="textCapWords"
            android:importantForAutofill="no"/>

    </com.google.android.material.textfield.TextInputLayout>



    <Button
        android:id="@+id/add_tag_positiveButton"
        android:layout_below="@+id/addTagTextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:text="@string/ok_text"
        android:layout_margin="@dimen/button_margin"/>

    <Button
        android:id="@+id/add_tag_negativeButton"
        android:layout_below="@id/addTagTextInputLayout"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/add_tag_positiveButton"
        android:text="@string/cancel_text"
        android:layout_margin="@dimen/button_margin"/>

</RelativeLayout>