<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content" android:layout_height="wrap_content"
    android:padding="@dimen/activity_vertical_margin">

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/privacy_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:text="@string/privacy_dialog_title"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"/>

    <com.google.android.material.textview.MaterialTextView
        android:id="@+id/privacy_description"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/privacy_textView"
        android:layout_centerInParent="true"
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:paddingHorizontal="@dimen/activity_horizontal_margin"
        android:text="@string/privacy_description_text"
        android:textAppearance="@style/TextAppearance.AppCompat.Medium" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/pic_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/privacy_description"
        android:layout_centerInParent="true"
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:text="@string/private_profile_picture_switch_text" />

    <com.google.android.material.switchmaterial.SwitchMaterial
        android:id="@+id/email_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/pic_switch"
        android:layout_centerInParent="true"
        android:paddingVertical="@dimen/activity_vertical_margin"
        android:text="@string/private_e_mail_address_switch_text" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/privacy_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/email_switch"
        android:layout_centerInParent="true"
        android:text="@string/ok_text"
        android:layout_margin="@dimen/button_margin"/>


</RelativeLayout>