<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_vertical_margin"
    tools:context=".activity.NotificationViewActivity">

    <TextView
        android:id="@+id/notification_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/default_notification_text"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6"/>

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/notification_textView"
        android:layout_centerHorizontal="true"
        android:elevation="1dp"
        android:paddingVertical="@dimen/activity_vertical_margin">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingVertical="@dimen/activity_vertical_margin">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/notif_profile_CardView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_centerHorizontal="true"
                android:elevation="1dp"
                android:layout_margin="@dimen/button_margin">

                <ImageView
                    android:id="@+id/profile_imageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:padding="@dimen/button_margin"
                    android:layout_centerHorizontal="true"
                    android:contentDescription="@string/profile_pic_description" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/nameTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/notif_profile_CardView"
                android:layout_centerHorizontal="true"
                android:text="@string/default_username_text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
                android:layout_margin="@dimen/button_margin"/>

            <TextView
                android:id="@+id/skillsTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_below="@id/nameTextView"
                android:layout_margin="@dimen/button_margin"
                android:text="@string/skills_text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <ListView
                android:id="@+id/skills_ListView"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/skillsTitle"/>


        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <Button
        android:id="@+id/positiveButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:drawablePadding="@dimen/activity_horizontal_margin"
        android:layout_margin="@dimen/button_margin"/>

    <Button
        android:id="@+id/negativeButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/positiveButton"
        android:layout_alignParentBottom="true"
        android:drawablePadding="@dimen/activity_vertical_margin"
        android:layout_margin="@dimen/button_margin"/>
</RelativeLayout>