<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">

    <TextView
        android:id="@+id/dialog_project"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="New Project"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

    <EditText
        android:id="@+id/projectTitle_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/dialog_project"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="Project Title"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <EditText
        android:id="@+id/description_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/projectTitle_editText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Project Description"
        android:inputType="textMultiLine" />

    <TextView
        android:id="@+id/leaderName_textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/description_editText"
        android:layout_centerHorizontal="true"
        android:text="Leader: "
        android:textSize="15sp"
        android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

    <EditText
        android:id="@+id/objectives_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/leaderName_textView"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:gravity="start|top"
        android:hint="Project Objectives"
        android:inputType="textMultiLine" />

    <EditText
        android:id="@+id/projectTag_editText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/objectives_editText"
        android:layout_centerHorizontal="true"
        android:ems="10"
        android:hint="@string/tags_hint"
        android:inputType="textPersonName"
        android:singleLine="true" />

    <Button
        android:id="@+id/cancelNewProject_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/button_confirmNewProject"
        android:layout_below="@id/projectTag_editText"
        android:layout_margin="@dimen/button_margin"
        android:text="@string/cancel_text" />

    <Button
        android:id="@+id/button_confirmNewProject"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/projectTag_editText"
        android:layout_alignParentEnd="true"
        android:text="@string/confirm_text"
        android:layout_margin="@dimen/button_margin" />
</RelativeLayout>