<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".activity.TeammateProfileActivity">

    <com.google.android.material.card.MaterialCardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="@dimen/cardview_default_elevation">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="@dimen/activity_vertical_margin">

            <com.google.android.material.card.MaterialCardView
                android:id="@+id/profilPicCardView"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:elevation="@dimen/cardview_default_elevation">

                <ImageView
                    android:id="@+id/profilePicImageView"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitCenter"
                    android:contentDescription="@string/profile_pic_description"
                    android:padding="@dimen/activity_vertical_margin" />

            </com.google.android.material.card.MaterialCardView>

            <TextView
                android:id="@+id/emailTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/profilPicCardView"
                android:layout_centerInParent="true"
                android:paddingVertical="@dimen/activity_vertical_margin"
                android:text="@string/nav_header_subtitle"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />

            <TextView
                android:id="@+id/skillsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/emailTextView"
                android:layout_centerHorizontal="true"
                android:text="@string/skills_text"
                android:textAppearance="@style/TextAppearance.MaterialComponents.Headline6" />

            <ListView
                android:id="@+id/skillsListView2"
                android:layout_below="@+id/skillsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:padding="@dimen/activity_horizontal_margin"
                android:textAlignment="center" />

        </RelativeLayout>

    </com.google.android.material.card.MaterialCardView>

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/floatingActionButton2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:clickable="true"
        android:focusable="true"
        android:onClick="onTeammateFabClick"
        android:src="@android:drawable/ic_dialog_email"
        android:layout_margin="@dimen/fab_margin"/>


</RelativeLayout>